--- a/last_page.html
+++ b/last_page.html
@@ -18,11 +18,11 @@
 
         <h3>Welcome to Live Drink</h3>
 
-        <button class="Knopka" onclick="window.location.href='page_2.html'">Send it</button>
+        <button class="Knopka" onclick="window.location.href=''">Send it</button>
 
-        <button class="Knopka" onclick="window.location.href='page_2.html'"></button>
-        <button class="Knopka" onclick="window.location.href='page_2.html'"></button>
-        <button class="Knopka" onclick="window.location.href='page_2.html'"></button>
+        <button class="Knopka" onclick="window.location.href=''">Instagram</button>
+        <button class="Knopka" onclick="window.location.href=''">Facebook</button>
+        <button class="Knopka" onclick="window.location.href=''">Twitter</button>
     </div>
 </body>
 </html>
