--- a/main_page.html
+++ b/main_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Live Drink</title>
+    <link rel="stylesheet" href="main_page.css">
 </head>
 <body>
 </div class="container">
