--- a/page_1.html
+++ b/page_1.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <head>
     <title>Live Drink</title>
+    <link rel="stylesheet" href="page_1.css">
 </head>
 <body>
 </div class="container">
     <div class="contant">
-        <div class="imge-text">
+        <div class="imge">
             <img src="fotos/fresh&natural.png">
         </div>
 
-        <div class="imge-bottle">
+        <div class="imge">
             <img src="fotos/bottle1.png">
         </div>
 
-        <div class="imge-list">
+        <div class="imge">
             <img src="">
         </div>
 
