--- a/page_2.html
+++ b/page_2.html
@@ -5,15 +5,15 @@
 <body>
 </div class="container">
     <div class="contant">
-        <div class="imge-text">
+        <div class="image-text2">
             <img src="fotos/100%loved.png">
         </div>
 
-        <div class="imge-bottle">
+        <div class="image-bottle2">
             <img src="fotos/bottle2.png">
         </div>
 
-        <div class="imge-list">
+        <div class="image-list2">
             <img src="">
         </div>
 
