--- a/page_3.html
+++ b/page_3.html
@@ -5,15 +5,15 @@
 <body>
 </div class="container">
     <div class="contant">
-        <div class="imge-text">
+        <div class="image-text3">
             <img src="fotos/4days4ways.png">
         </div>
 
-        <div class="imge-bottle">
+        <div class="image-bottle3">
             <img src="fotos/bottle3.png">
         </div>
 
-        <div class="imge-list">
+        <div class="image-list3">
             <img src="">
         </div>
 
