--- a/page_4.html
+++ b/page_4.html
@@ -5,15 +5,15 @@
 <body>
 </div class="container">
     <div class="contant">
-        <div class="imge-text">
+        <div class="image-text4">
             <img src="fotos/awardwinningtastes.png">
         </div>
 
-        <div class="imge-bottle">
+        <div class="image-bottle4">
             <img src="fotos/bottle4.png">
         </div>
 
-        <div class="imge-list">
+        <div class="image-list4">
             <img src="">
         </div>
 
