--- a/last_page.html
+++ b/last_page.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <head>
     <title>Live Drink</title>
+    <link rel="stylesheet" href="last_page.css">
 </head>
 <body>
-</div class="container">
-    <div class="contant">
-        <div class="imge-text">
-            <img src="fotos/enteryouremailhere.png">
+
+    <div class="container">
+      <div class="contant">
+
+        <div class="left">
+          <span class="follow-title">Follow Us</span>
+          <div class="social-icons">
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+          </div>
         </div>
-        <div class="imge-text">
-            <img src="fotos/followus.png">
+            <div class="divider"></div>
+            <div class="right">
+          <span class="email-label">Enter your EMAIL here*</span>
+          <input class="email-input" type="text" placeholder="email">
+          <button class="send-btn" onclick="window.location.href='page_2.html'">Send it</button>
         </div>
-
-        <div class="text-field">
-            <input type="text" placeholder="email">
-        </div>
-
-        <h3>Welcome to Live Drink</h3>
-
-        <button class="Knopka" onclick="window.location.href=''">Send it</button>
-
-        <button class="Knopka" onclick="window.location.href=''">Instagram</button>
-        <button class="Knopka" onclick="window.location.href=''">Facebook</button>
-        <button class="Knopka" onclick="window.location.href=''">Twitter</button>
+    
+      </div>
     </div>
-</body>
-</html>
+    
+    </body>
+    </html>
