--- a/page_1.html
+++ b/page_1.html
@@ -6,7 +6,7 @@
 <body>
 </div class="container">
     <div class="contant">
-        <div class="imge">
+        <div class="imge-text">
             <img src="fotos/fresh&natural.png">
         </div>
 
@@ -14,12 +14,12 @@
             <img src="fotos/bottle1.png">
         </div>
 
-        <div class="imge">
-            <img src="">
+        <div class="text-description-right">
+            </p>A bright and refreshing orange drink made from carefully selected citrus fruits. Its smooth, naturally sweet flavor delivers a burst of sunshine in every sip. Perfect for energizing your day and enjoying a moment of pure refreshment."</p>
         </div>
 
         <h3>Welcome to Live Drink</h3>
         <button class="Knopka" onclick="window.location.href='page_2.html'">See More</button>
     </div>
 </body>
-</html>
+</html> 
