--- a/page_2.html
+++ b/page_2.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <head>
     <title>Live Drink</title>
+    <link rel="stylesheet" href="page_2.css">
 </head>
 <body>
 </div class="container">
     <div class="contant">
-        <div class="image-text2">
+        <div class="imge">
             <img src="fotos/100%loved.png">
         </div>
 
-        <div class="image-bottle2">
+        <div class="imge">
             <img src="fotos/bottle2.png">
         </div>
 
-        <div class="image-list2">
-            <img src="">
+        <div class="text-description-teft">
+            <p>A rich blend of ripe berries that creates a bold and juicy taste experience. The balance of sweetness and freshness makes every sip vibrant and satisfying. Ideal for those who love deep fruit flavors."</p>
         </div>
 
         <h3>Welcome to Live Drink</h3>
