--- a/page_3.html
+++ b/page_3.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <head>
-    <title>Live Drink</title>
+    <title>Live Drink</title>\
+    <link rel="stylesheet" href="page_3.css">
 </head>
 <body>
 </div class="container">
     <div class="contant">
-        <div class="image-text3">
+        <div class="imge">
             <img src="fotos/4days4ways.png">
         </div>
 
-        <div class="image-bottle3">
+        <div class="imge">
             <img src="fotos/bottle3.png">
         </div>
 
-        <div class="image-list3">
-            <img src="">
+        <div class="text-description-right">
+            <p>A lively green blend inspired by fresh kiwi and crisp apples. Its refreshing taste brings a perfect balance of sweetness and gentle acidity. A revitalizing drink that feels light, natural, and energizing."</p>
         </div>
 
         <h3>Welcome to Live Drink</h3>
