--- a/page_4.html
+++ b/page_4.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <head>
-    <title>Live Drink</title>
+    <title>Live Drink</title>\
+    <link rel="stylesheet" href="page_4.css">
 </head>
 <body>
 </div class="container">
     <div class="contant">
-        <div class="image-text4">
+        <div class="imge">
             <img src="fotos/awardwinningtastes.png">
         </div>
 
-        <div class="image-bottle4">
+        <div class="imge">
             <img src="fotos/bottle4.png">
         </div>
 
-        <div class="image-list4">
-            <img src="">
+        <div class="text-description-teft">
+            <p>Smooth strawberry-based drink with a naturally sweet and fruity character. The bright flavor and delicate aroma create a refreshing and enjoyable experience. A perfect choice for anyone who loves classic berry freshness."</p>
         </div>
 
         <h3>Welcome to Live Drink</h3>
